@@ -141,7 +141,9 @@ kaspConnect(DAEMONCONFIG* config, DB_HANDLE	*handle)
 	 *
 	 */
     /* Note that all these XML derived strings are unsigned chars */
-	(void) DbConnect(handle, (char *)config->schema, (char *)config->host, (char *)config->password, (char *)config->user);
+	if (DbConnect(handle, (char *)config->schema, (char *)config->host, (char *)config->password, (char *)config->user) != 0) {
+        exit(-1);
+    }
 
 }
 
